# macros

./: .bashrc  .gitignore  AO2DFileReducer.C  AliceTree2AT.C  McFileReducer.C  aliCleaner.sh  alicetree2at.cpp  genconfiller.cpp
AT/: alicetree2at.cpp  genconfiller.cpp  plainer.cpp
Other/ctReso/: fitEff.C  fitSmearedHisto.C  smearToyMc.C  th1tf1SmearConsistency.C
Other/tpc/: ArmenterosPodolanskiCascade.C  ArmenterosPodolanskiToyMC.C  getStandardDerivedTreesFromHyperloop.sh  tsallis.C
QA/: AliceTree2AT.C  mc_qa.C  res_and_pull_qa.C  treeKF_qa.C
QA/atqa_based/: bdt_qa.cpp  corrBg_qa.cpp  corrBg_qa.h  ct_gen_qa.cpp  ct_mc_qa.cpp  kf_vs_dca_qa.cpp  mass_qa.cpp  mass_qa_toy.cpp  mc_qa.cpp  minv_vs_bdt_qa.cpp  pid_qa.cpp  treeKF_qa.cpp  tree_qa.cpp  varCorr_qa.cpp  yield_lifetime_qa.cpp
QA/config/: config_massfitter.json  config_massfitter.signal.json
QA/macro_based/: ArmenterosPodolanski.C  Fit_Lc_flarefly.py  IdentEntriesChecker.C  cascadeAP.cpp  corrBgBuilder.C  corrBkgLc.C  countNEvents.C  dataVsFonll.C  fitCorrBg.C  fonll.h  lumiRead.C  mass_qa.C  minvBuilder.C  ptLb.C  ptLbFromGenShape.C  pt_NPweight_builder.C  pt_gen_builder.C  pt_gen_builder_AT.C  swappedQa.C  tpc_qa.C  treeCounter.C
bdt/: ListVarsToSkipWriter.C  apply_BDT_to_data.py  bdtQAer.sh  config.application.yaml  config.train.11.yaml  config.train.12.yaml  config.train.13.yaml  config.train.14.yaml  config.train.2.yaml  config.train.3.yaml  config.train.4.yaml  config.train.5.yaml  config.train.51.yaml  config.train.52.yaml  config.train.53.yaml  config.train.yaml  config.train_selection.1.yaml  config.train_selection.2.yaml  config.train_selection.3.yaml  config.train_selection.4.yaml  config.train_selection.5.yaml  config.train_selection.51.yaml  config.train_selection.52.yaml  config.train_selection.53.yaml  config.train_selection.yaml  config.tree2panda.yaml  exam_onnx.py  my_plot_utils.py  specialQAer.sh  train_multi_class_BDT.py  transform_ROOT_to_pandas.py  ubuntu22.def  utils.py
bdt/config/: config.train.bz.yaml  config.train.yaml  config.train_selection.bz.yaml  config.train_selection.yaml
bdt/cutVar/: configCutVarWriter.cpp  config_cutvar.json  config_massfitter.json  runRunFitter.sh
o2/: checkForNonRepeating.sh  copyFilesFromHY.sh  copyStandardDerivedData.sh
o2/batch/: dpl-config_CSTlc_data.json  dpl-config_CSTlc_mc.json  dpl-config_skim.lhc22.apass7.json  dpl-config_skim.lhc24e3.json  dpl-config_skim.relax.json
o2/interactive/2prong/: dpl-config_taskd0.json
o2/interactive/lambda_c/: dpl-config_tasklc.json  run_create.sh  run_select.sh  run_skim.sh
o2/interactive/tpc/: OutputDirector.json  configuration.json  run_tpc.sh
o2_scripts_and_configs/: copyStandardDerivedData.sh  dpl-config_skim.json  dpl-config_tasklc.json  run_skim.sh  run_tasklc.sh
o2_scripts_and_configs/batch/: dpl-config_CSTlc.json  dpl-config_CSTlc_data.json  dpl-config_CSTlc_mc.1.json  dpl-config_CSTlc_mc.11.json  dpl-config_CSTlc_mc.12.json  dpl-config_CSTlc_mc.13.json  dpl-config_CSTlc_mc.14.json  dpl-config_CSTlc_mc.2.json  dpl-config_CSTlc_mc.3.json  dpl-config_CSTlc_mc.4.json  dpl-config_CSTlc_mc.5.json  dpl-config_CSTlc_mc.51.json  dpl-config_CSTlc_mc.52.json  dpl-config_CSTlc_mc.53.json  dpl-config_CSTlc_mc.json  dpl-config_skim.json  dpl-config_skim.lhc22.apass7_tm.json  dpl-config_skim.lhc24e3.json  dpl-config_skim.lhc24e3_tm.json  dpl-config_taskd0.json  dpl-config_tasklc.json
o2_scripts_and_configs/interactive/: dpl-config_create.json  dpl-config_skim.json  dpl-config_skim.lhc22.apass7.json  dpl-config_skim.lhc24e3.json  dpl-config_skim.relax.json  dpl-config_tasklc.json  dpl-config_tasklc_data.json  run_skim.sh
o2_scripts_and_configs/interactive/2prong/: dpl-config_skim.json  run_skim.sh  run_taskd0.sh
o2_scripts_and_configs/interactive/lambda_c/: dpl-config_skim.lhc24e3.json  dpl-config_tasklc.json  dpl-config_tasklc_data.json  run_tasklc.sh  run_treecreat.sh
o2_scripts_and_configs/interactive/tpc/: configuration.json  (+1 more)
pictures/: ArmenterosPodolanskiCascade.C  DecayDrawer.h  lifetimes.C  lifetimes.style.cc  threeBodyDecay.C
qa2/: lambdac_eff.C  mc_qa2.C  mc_qa2.style.cc  mc_qa2diff.C  res_and_pull_qa2.C  res_and_pull_qa2.style.cc  treeKF_qa2.C  treeKF_qa2.style.cc
qa2/exe_based/: .config.sh  BdtEfficiencyCalculator.hpp  CMakeLists.txt  Fitter.hpp  HFInvMassFitter.cpp  HFInvMassFitter.cxx  HFInvMassFitter.h  HFInvMassFitter.hpp  HFInvMassFitterLinkDef.h  Helper.cpp  Helper.hpp  HelperEfficiency.hpp  HelperGeneral.cpp  HelperGeneral.hpp  HelperMath.cpp  HelperMath.hpp  HelperPlot.cpp  HelperPlot.hpp  Qa2LinkDef.h  ShapeFitter.cpp  ShapeFitter.hpp  Shapes.hpp  mc_qa2.cpp  mc_qa2diff.cpp  pid_qa.cpp  qa2Config.sh.in  treeKF_qa2.cpp  treeKF_qa2.style.cc  treeKF_qa2diff.cpp  treeKF_qa3.cpp
qa2/exe_based/config/: config_massfitter.json
qa2/exe_based/styles/: bdt_qa.style.cc  mc_qa2.dpg.style.cc  mc_qa2.style.cc  treeKF_qa2.dpg.style.cc  varCorr.style.cc
qa2/exe_based/tasks/: bdt_efficiency.cpp  complex_vs_bdt_pdfer.cpp  corrected_yields_qa2.cpp  ct_fit.cpp  ct_mcfit.cpp  cutvar_to_mc_compare.cpp  dwrth1.cpp  efficiency.cpp  efficiency_bdtcutset.cpp  efficiency_bdtdiff.cpp  fit_yield.cpp  graph_qa3.cpp  mass_bdt_qa.cpp  mass_bdt_qa_thn.cpp  mass_bdt_qa_thn_toy.cpp  mass_fit.cpp  mass_fit2.cpp  mc_qa2.cpp  mc_qa2diff.cpp  multifit_qa.cpp  pid_qa.cpp  pt_weight_builder.cpp  raw_yield_vs_bdt_pdfer.cpp  runMassFitter.C  runMassFitter.cpp  scale_thnsparse_temp.cpp  tpc_qa.cpp  treeKF_qa2.cpp  treeKF_qa2diff.cpp  treeKF_qa3.cpp  tsallis_fit_pt.cpp  varCorr_qa2.cpp  yield_lifetime_qa_thn.cpp
qa2/macro_based/: corrBgBuilder.C  fitCorrBg.C  lambdac_ct.C  mc_qa2.C  mc_qa2.style.cc  mc_qa2diff.C  pid_qa2.C  plot_histograms.C  postprocessFit.C  th2ToResidualVsX.C  tpc_qa2.C  treeKF_qa2.C
qa2/postscripts/: corrBgMerger.cpp  corrBgPdf2Png.sh  corrPlotExtractor.sh  mergeIndividualCutVarOutputs.sh  pngCutter.sh  pngMerger.cpp
qa_plots/: lambdac_minv.C  tree_qa.C
(+1 files in other folders)
